# mini-inference-engine

./: CMakeLists.txt  README.md  dependencies_setup.sh  verify.cpp
docker/: Dockerfile  docker-compose.yml
include/data/: tensor.hpp
include/layers/: layer.hpp  layer_factory.hpp  maxpooling_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp
include/ops/: maxpooling_op.hpp  op.hpp  relu_op.hpp  sigmoid_op.hpp
include/runtime/pnnx/: ir.hpp  store_zip.hpp
src/data/: tensor.cpp
src/layers/: layer.cpp  layer_factory.cpp  maxpooling_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp
src/ops/: maxpooling_op.cpp  op.cpp  relu_op.cpp  sigmoid_op.cpp
src/runtime/pnnx/: ir.cpp  store_zip.cpp
tests/: CMakeLists.txt  maxpooling_layer_test.cpp  relu_layer_test.cpp  sigmoid_layer_test.cpp  tensor_test.cpp  test_main.cpp
